# HyDE-RAG

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
chromadb/: DockerFile  init_chroma.py
chromadb/db/: chroma.sqlite3
chromadb/db/915e35e7-98c2-480e-94e8-019b0abdb455/: index_metadata.pickle
examples/: ollama_api.py  ollama_manual.py  requirements.txt
hyde/: DockerFile  ingestion_pipeline.py  main.py  test_llama_index.py
project/: confidence_filter.py  config.py  correlation_filter.py  data_loader.py  doc_list.py  embedding_setup.py  language_engine.py  llm_setup.py  main.py  query_engine.py  query_transformer.py  response_maker.py  retriever.py  streamlit_app.py  vector_store_setup.py
