[tool.poetry]
name = "hyde-rag"
version = "0.1.0"
description = ""
authors = ["Samito-uc3m <100429112@alumnos.uc3m.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.13"
black = "^23.12.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"
ruamel-yaml = "^0.18.5"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff]
ignore-init-module-imports = true
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E402",  # module level import not at top of file
    "F811",  # redefinition of classes
]
