[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.0.1"
streamlit = "^1.41.1"
llama-index = "^0.12.9"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"
kaggle = "^1.6.17"
fasttext-wheel = "^0.9.2"
chromadb = "^0.6.1"
kagglehub = "^0.3.6"
llama-index-embeddings-huggingface = "^0.4.0"
llama-index-vector-stores-chroma = "^0.4.1"
numpy = "1.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
